cod/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: cod
  name: cod
  namespace: w3cie
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    k8s-app: cod
  sessionAffinity: None
  type: ClusterIP
