cod/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/temporal-redirect: https://cod.wisv.ch/
  name: redirect-cod
  namespace: w3cie
spec:
  rules:
    - host: cod.ch.tudelft.nl
  tls:
    - hosts:
        - cod.ch.tudelft.nl
      secretName: cod-tls
